# agent-agency

./: .eslintrc.cjs  .gitignore  ARBITER-V2-SPECS-COMPLETE.md  AUDIT_TRAIL_README.md  BUILD_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CURRENT_SESSION_SUMMARY.md  Cargo.toml  Cargo.toml.bak  DELIVERY_CHECKLIST.md  DEPLOYMENT_READINESS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_QUALITY_STANDARDS.md  END_TO_END_ARCHITECTURE_ANALYSIS.md  EXECUTIVE_BRIEFING.md  FINAL_PRODUCTION_ROADMAP.md  HIGH_LEVEL_FIXES_SUMMARY.md  MOC.md.backup  MULTIMODAL_RAG_PHASE3_PLAN.md  PRODUCTION_READINESS.md  QUICK_START.md  README.md  README_UPDATE_SUMMARY.md  SYSTEM_HARDENING_ANALYSIS.md  TEST_SUITE_REPAIR_PROGRESS.md  TEST_SUITE_REPAIR_SUMMARY.md  TODO_FIX_STRATEGY.md  TODO_IMPLEMENTATION_SUMMARY.md  UNIVERSAL_HIDDEN_TODO_ANALYSIS_SUMMARY.md  agents.md  analyze_dependencies.py  create_dependency_graph.py  create_dependency_graph_fixed.py  docker-compose.test.yml  error-handling-validation.rs  error-test  feature.plan.md  final_analysis_after_analytics_dashboard.md  final_analysis_after_caching_integration.md  final_analysis_after_evidence_collection.md  (+30 more)
demo/: Cargo.toml
demo/src/: main.rs
iterations/v2/playground/: Cargo.toml  README.md  broken-rust.rs  broken-types.ts  tsconfig.json
iterations/v3/: .clippy.toml  .gitignore  ARBITRATION_IMPLEMENTATION_SUMMARY.md  CAWS_FLAKINESS_ANALYSIS_IMPLEMENTATION.md  COMPILATION_FIXES_FINAL_SESSION.md  COMPILATION_FIX_REPORT.md  COMPILATION_SUCCESS_REPORT.md  COMPLETE_TODO_SUMMARY.md  CONCURRENT_AGENT_OPERATIONS.md  CONCURRENT_SESSION_SUMMARY.md  CONTEXT_PRESERVATION_IMPLEMENTATION.md  CONTINUED_SESSION_FINAL_REPORT.md  CONTINUED_WORK_SESSION_SUMMARY.md  COREML_IMPLEMENTATION_COMPLETE.md  COREML_PLAN_INTEGRATION_SUMMARY.md  CORE_ML_INDEX.md  CORE_ML_PHASE_0_1_SUMMARY.md  CORE_ML_PHASE_2_COMPLETE.md  CORE_ML_PHASE_3_START.md  CORE_ML_READY_FOR_PRODUCTION.md  CORE_ML_SESSION_SUMMARY.md  Cargo.lock.backup  Cargo.toml  EPIC_SESSION_FINAL_SUMMARY.md  GATE_D_VALIDATION_REPORT.md  GRAND_FINAL_SUMMARY.md  HANDOFF_DOCUMENT.md  HIDDEN_TODOS_ACTION_PLAN.md  HIDDEN_TODOS_EXHAUSTIVE_ANALYSIS.md  HIDDEN_TODO_PATTERNS_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEXERS_IMPLEMENTATION.md  METAL_GPU_IMPLEMENTATION_COMPLETE.md  MODEL_BENCHMARKING_IMPLEMENTATION.md  Makefile  PHASE_3B_GATE_C_REPORT.md  PHASE_3B_INFERENCE_TESTING.md  PHASE_3_EXECUTION_PLAN.md  (+102 more)
iterations/v3/.agent/: provenance.json  scaffold-provenance.json
iterations/v3/.cargo/: config.toml
iterations/v3/.caws/: working-spec.yaml
iterations/v3/agent-agency-contracts/: Cargo.toml
iterations/v3/agent-mcp/: Cargo.toml
iterations/v3/agent-memory/: Cargo.toml  README.md  memory_schema.sql
iterations/v3/agent-workers/: Cargo.toml
iterations/v3/ane-tests/: Cargo.toml
iterations/v3/api-server/: Cargo.toml
iterations/v3/apple-silicon/: ARCHITECTURE.md  Cargo.toml  Cargo.toml.full  DOCUMENTATION_INDEX.md  README.md  build.rs
iterations/v3/assets/: dashboard.html
iterations/v3/bridges/: Package.swift  README.md
iterations/v3/brittleness-test/: Cargo.toml
iterations/v3/caching/: Cargo.toml  README.md
iterations/v3/claim-extraction/: Cargo.toml
iterations/v3/cli/: Cargo.toml
iterations/v3/codemod/: test.js
iterations/v3/config/: Cargo.toml  README.md  production.yaml
iterations/v3/context-preservation-engine/: Cargo.toml
iterations/v3/coreml-bridge/: Package.swift  README.md
iterations/v3/council/: Cargo.toml  build.rs
iterations/v3/database/: Cargo.toml  schema.sql  schema_no_vector.sql
iterations/v3/demo/: README.md
iterations/v3/demo_app/: Cargo.toml
iterations/v3/docker/: Dockerfile.api  Dockerfile.demo-app  Dockerfile.federated-learning  Dockerfile.runtime-optimization  docker-compose.production.yml
iterations/v3/docs/: ARCHITECTURE_OVERVIEW.txt  BUILD_OPTIMIZATION.md  CAWS_COMPLIANCE_PLAN.md  COMPONENT_INTEGRATION_CHECKLIST.md  COMPREHENSIVE_V3_GAP_ANALYSIS.md  CONCURRENCY_OPTIMIZATION.md  CORE_ML_GATE_C_VALIDATION.md  CORE_ML_INTEGRATION_RISK.md  COUNCIL_COMPILATION_COMPLETE.md  DOCUMENTATION_QUALITY_V3_INTEGRATION.md  DOCUMENTATION_STANDARDS.md  END_TO_END_ARCHITECTURE.md  GATE_C_RESULTS_PHASE_2.md  GATE_C_TESTING_CHECKLIST.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_PATTERNS.md  MODULE_CAPABILITIES_REFERENCE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_VISION.md  README.md  SYSTEM_OVERVIEW.md  THEORY_COMPLIANCE_MATRIX.md  V3_INTEGRATION_POINTS_FOR_V2_COMPONENTS.md  V3_SUPERIORITY_PLAN.md  V3_THEORY_ALIGNMENT_GAP_ANALYSIS.md  WORKSPACE_INDEXING_SYSTEM.md  agents.md  architecture.md  build-optimization.md  caws-runtime-validator.md  communication-architecture.md  concurrency-optimization.md  coordinating-concurrency.md  core-ml-gate-c-validation.md  core-ml-implementation-path.md  coreml-anything-integration.md  coreml-impl.plan.md  developer-workflow-guide.md  (+13 more)
iterations/v3/e2e-tests/: Cargo.toml  assertions.rs  fixtures.rs  harness.rs  mod.rs  runner.rs  scenarios.rs
iterations/v3/embedding-service/: Cargo.toml
iterations/v3/enrichers/: Cargo.toml  build.rs
iterations/v3/environments/: README.md
iterations/v3/examples/: doc_quality_usage.rs
iterations/v3/federated-learning/: Cargo.toml
iterations/v3/file_ops/: Cargo.toml
iterations/v3/indexers/: Cargo.toml
iterations/v3/ingestors/: Cargo.toml
iterations/v3/integration-tests/: Cargo.toml  README.md
iterations/v3/interfaces/: Cargo.toml  api.rs  cli.rs  mcp.rs  mod.rs  websocket.rs
iterations/v3/knowledge-ingestor/: README.md
iterations/v3/languages/: README.md
iterations/v3/mcp-integration/: Cargo.toml
iterations/v3/memory/: Cargo.toml  README.md
iterations/v3/migrations/: 002_create_vector_tables.sql
iterations/v3/minimal-diff-evaluator/: Cargo.toml
iterations/v3/model-benchmarking/: Cargo.toml  v3_superiority_report_64a5555a-5621-4d3f-92f5-969c238ac58c.md
iterations/v3/model-hotswap/: Cargo.toml
iterations/v3/monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
(+10522 files in other folders)
