# This file serves as a workspace root for rust-analyzer
# The actual Rust workspace is in iterations/v3/

[workspace]
resolver = "2"
members = [
    "iterations/v3/council",
    "iterations/v3/workers",
    "iterations/v3/apple-silicon",
    "iterations/v3/research",
    "iterations/v3/mcp-integration",
    "iterations/v3/provenance",
    "iterations/v3/claim-extraction",
    "iterations/v3/reflexive-learning",
    "iterations/v3/model-benchmarking",
    "iterations/v3/security-policy-enforcer",
    "iterations/v3/minimal-diff-evaluator",
    "iterations/v3/context-preservation-engine",
    "iterations/v3/embedding-service",
    "iterations/v3/system-health-monitor",
    "iterations/v3/workspace-state-manager",
    "iterations/v3/resilience",
    "iterations/v3/config",
    "iterations/v3/database",
    "iterations/v3/caching",
    "iterations/v3/integration-tests"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Darian Rosebrook <darian@example.com>"]
license = "MIT"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP and web
reqwest = { version = "0.11", features = ["json", "stream"] }

# Caching
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Apple Silicon specific
core-foundation = "0.9"
objc = "0.2"

# Vector operations for embeddings
ndarray = "0.15"
