[workspace]
resolver = "2"
members = [
    # "self-prompting-agent",  # TODO: Re-enable when compilation issues resolved
    # "apple-silicon",  # TODO: Temporarily disabled due to syntax errors
    "workers",
    "research",
    "mcp-integration",  # MCP integration server
    "provenance",
    "claim-extraction",
    # "reflexive-learning",  # TODO: Re-enable when compilation issues resolved
    # "model-benchmarking",  # TODO: Re-enable when compilation issues resolved
    # "security-policy-enforcer",  # TODO: Re-enable when compilation issues resolved
    # "minimal-diff-evaluator",  # TODO: Re-enable when compilation issues resolved
    # "context-preservation-engine",  # TODO: Re-enable when compilation issues resolved
    # "embedding-service",  # TODO: Re-enable when compilation issues resolved
    # "system-health-monitor",  # TODO: Re-enable when compilation issues resolved
    # "workspace-state-manager",  # TODO: Re-enable when compilation issues resolved
    # "resilience",  # TODO: Re-enable when compilation issues resolved
    # "observability",  # TODO: Re-enable when compilation issues resolved
    "interfaces",  # MCP interface implementation
    # "source-integrity",  # TODO: Re-enable when compilation issues resolved
    "config",
    "database",
    "recovery",
    # "integration-tests",  # TODO: Re-enable when compilation issues resolved
    # "claim-extraction",  # TODO: Re-enable when compilation issues resolved
    # "agent-agency-contracts",  # TODO: Re-enable when compilation issues resolved
    # "caching",  # TODO: Re-enable when compilation issues resolved
    # "planning-agent",  # TODO: Re-enable when compilation issues resolved
    # "council",  # TODO: Re-enable when compilation issues resolved
    # "ingestors",  # TODO: Re-enable when compilation issues resolved
    # "enrichers",  # TODO: Re-enable when compilation issues resolved
    # "indexers",  # TODO: Re-enable when compilation issues resolved
    # "knowledge-ingestor",  # TODO: Re-enable when compilation issues resolved
    # "file_ops",  # TODO: Re-enable when compilation issues resolved
    # "cli",  # TODO: Re-enable when compilation issues resolved
    # "api-server",  # TODO: Re-enable when compilation issues resolved
    # "worker",  # TODO: Re-enable when compilation issues resolved
    # "runtime-optimization",  # TODO: Re-enable when compilation issues resolved
    # "tool-ecosystem",  # TODO: Re-enable when compilation issues resolved
    # "federated-learning",  # TODO: Re-enable when compilation issues resolved
    # "model-hotswap",  # TODO: Re-enable when compilation issues resolved
    # "production",  # TODO: Re-enable when compilation issues resolved
    "e2e-tests"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Darian Rosebrook <darian@example.com>"]
license = "MIT"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.74"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP and web
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Apple Silicon specific
core-foundation = "0.9"
objc = "0.2"

# Vector operations for embeddings
ndarray = "0.15"

# Random number generation
rand = { version = "0.8", features = ["std"] }

# Force compatible versions to resolve indicatif/console conflicts
indicatif = "0.17"
console = { version = "0.15", features = ["std"] }

# CAWS integration (using Node.js tools, not Rust crate)
# caws-core = { path = "../../apps/tools/caws" }

pkcs8 = "0.10"

# Security utilities
security = { path = "security" }

# Observability backends (now in individual crates)
# redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
# prometheus = "0.13"
# cadence = "1.4"   # StatsD client

[profile.release]
opt-level = 3
debug = 1                  # keep some symbols for backtraces
incremental = false        # avoid pathological LTO+incremental combos
codegen-units = 1          # best runtime perf/size
lto = "thin"               # great perf/size without full-fat link times
panic = "abort"            # if acceptable for binaries
strip = "symbols"          # if smaller artifacts help link time/size

[profile.dev]
opt-level = 0
debug = 2
incremental = true
codegen-units = 256        # maximize parallel codegen for quick rebuilds
lto = "off"
debug-assertions = true
overflow-checks = true

[profile.test]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256
lto = "off"
debug-assertions = true
