[package]
name = "agent-agency-contracts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
once_cell = "1.19"
jsonschema = { version = "0.17", default-features = false, features = ["draft202012"] }
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait = "0.1"

[dev-dependencies]
serde_json = "1"
