[package]
name = "ane-tests"
version = "0.1.0"
edition = "2021"

[workspace]
# Make this a standalone crate, not part of the parent workspace

[dependencies]
# ANE-specific dependencies
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tempfile = "3.0"

# Test dependencies
tokio-test = "0.4"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ane_benchmarks"
harness = false
