[package]
name = "agent-agency-api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core async runtime
tokio.workspace = true
clap = { version = "4.0", features = ["derive"] }

# Web framework
axum = { workspace = true, features = ["macros"] }
tower-http.workspace = true

# Server-sent events
axum-extra = { version = "0.9", features = ["typed-header"] }

# JSON handling
serde_json.workspace = true

# Date/time
chrono.workspace = true

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async streams
tokio-stream = "0.1"

# Error handling
thiserror.workspace = true

# Input validation
regex = "1.10"
once_cell = "1.19"

# Circuit breaker features already included in workspace tokio

# Service failover

# WebSocket support built into Axum

# Serialization
serde.workspace = true

# UUID handling
uuid.workspace = true

# Database client - temporarily disabled for compilation
# agent-agency-database = { path = "../database" }

# System health monitoring for real metrics (basic features only) - temporarily disabled
# agent-agency-system-health-monitor = { path = "../system-health-monitor", default-features = true }

# Additional dependencies for API functionality
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-postgres = "0.7"

# Agent agency interfaces (placeholder - may need external crate)
# agent_agency_interfaces = { path = "../interfaces" }
