[package]
name = "agent-agency-apple-silicon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core ML dependencies
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
safetensors = "0.4"
ort = "2.0.0-rc.10"
protobuf = "3.4"

# System dependencies
sysinfo = "0.30"
parking_lot = "0.12"
dashmap = "5.5"
num_cpus = "1.16"

# Utility dependencies
half = "2.4"
bytemuck = "1.14"
lru = "0.12"
ndarray = "0.15"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Other
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
