[workspace]

[package]
name = "brittleness-test"
version = "0.1.0"
edition = "2021"

[dependencies]
caws-runtime-validator = { path = "../caws/runtime-validator" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
