[package]
name = "claim-extraction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Claim extraction specific
regex = "1.10"
nom = "7.1"  # Parser combinators for claim parsing
petgraph = "0.6"  # Graph algorithms for claim relationships
reqwest = { version = "0.11", features = ["json"] }  # HTTP client for external verification
walkdir = "2.4"  # Efficient filesystem traversal
fastrand = "2.0"  # Fast random number generation


# Embedding service integration
embedding-service = { path = "../embedding-service" }

# Database integration
agent-agency-database = { path = "../database" }

# Database integration
agent-agency-database = { path = "../database" }

