[package]
name = "claim-extraction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Claim extraction specific
regex = "1.10"
nom = "7.1"  # Parser combinators for claim parsing
petgraph = "0.6"  # Graph algorithms for claim relationships
reqwest = { version = "0.11", features = ["json"] }  # HTTP client for external verification
walkdir = "2.4"  # Efficient filesystem traversal
fastrand = "2.0"  # Fast random number generation
lru = "0.12"  # LRU cache for coreference resolution
once_cell = "1.5"  # Lazy static initialization
md5 = "0.7"  # MD5 hashing for cache keys
futures = "0.3"  # Future utilities


# Embedding service integration
embedding-service = { path = "../embedding-service", optional = true }

# Database integration
agent-agency-database = { path = "../database" }

# Knowledge graph integration
knowledge-ingestor = { path = "../knowledge-ingestor" }

# Council integration for high-risk claim verification
agent-agency-council = { path = "../council" }

[features]
default = []
embeddings = ["embedding-service"]

