[package]
name = "agent-agency-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Centralized configuration management for Agent Agency V3"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

# Configuration-specific dependencies
config = "0.14"
figment = "0.10"
once_cell = "1.5"
validator = { version = "0.18", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
ring = "0.17"  # For encryption
zeroize = "1.7"  # For secure memory clearing
regex = "1.10"
hostname = "0.3"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["full"] }
