[package]
name = "agent-agency-context-preservation-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Context preservation specific
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
lru = "0.12"
futures = "0.3"
flate2 = "1.0"
sha2 = "0.10"
base64 = "0.22"
serde_yaml = "0.9"

# Encryption dependencies
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
scrypt = "0.11"
rand = "0.8"
hex = "0.4"
aes = "0.8"
cbc = "0.1"

# Database integration
sqlx = { workspace = true, features = ["postgres", "chrono", "uuid"] }

# Integration with existing V3 components
agent-agency-research = { path = "../research" }
# agent-agency-council = { path = "../council" }  # TODO: Remove if not needed
agent-agency-workers = { path = "../workers" }
agent-agency-security-policy-enforcer = { path = "../security-policy-enforcer" }
