[package]
name = "agent-agency-council"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
futures = "0.3"

# Local crates
agent-agency-contracts = { path = "../agent-agency-contracts" }
agent-agency-database = { path = "../database" }

# Additional dependencies
anyhow = "1.0"
regex = "1.10"
rand = "0.8"