[package]
name = "agent-agency-council"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
futures = "0.3"

# Local crates
agent-agency-contracts = { path = "../agent-agency-contracts" }
agent-agency-database = { path = "../database" }

# Additional dependencies
anyhow = "1.0"
regex = "1.10"
rand = "0.8"
linfa = "0.7"  # Machine learning framework for response time prediction
linfa-linear = "0.7"  # Linear regression for time estimation
statrs = "0.16"  # Statistical analysis for confidence intervals
lru = "0.12"  # LRU cache for reputation data
strsim = "0.11"  # String similarity algorithms for semantic analysis