[package]
name = "agent-agency-council"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
futures = "0.3"

# Local crates
agent-agency-contracts = { path = "../agent-agency-contracts" }
agent-agency-database = { path = "../database" }
agent-agency-apple-silicon = { path = "../apple-silicon" }  # Enabled for CoreML Mistral integration

# Additional dependencies
anyhow = "1.0"
regex = "1.10"
rand = "0.8"
linfa = "0.7"  # Machine learning framework for response time prediction
linfa-linear = "0.7"  # Linear regression for time estimation
statrs = "0.16"  # Statistical analysis for confidence intervals
lru = "0.12"  # LRU cache for reputation data
strsim = "0.11"  # String similarity algorithms for semantic analysis
once_cell = "1.5"  # Lazy initialization
fastrand = "2.0"  # Fast random number generation
md5 = "0.7"  # MD5 hashing
crossbeam = "0.8"  # Cross-thread channels

# NLP and text processing for position extraction
rust-bert = { version = "0.21", optional = true }  # BERT models for semantic understanding
tokenizers = "0.19"  # HuggingFace tokenizers
lingua = "1.6"  # Language detection
whatlang = "0.18"  # Fast language detection
comrak = "0.18"  # CommonMark markdown parser
tree-sitter = "0.20"  # Syntax tree parsing
tree-sitter-rust = "0.20"  # Rust language parsing
pest = "2.7"  # PEG parser for decision structures
pest_derive = "2.7"  # Derive macros for pest

# Advanced verdict parsing and analysis
serde_yaml = "0.9"  # YAML parsing for structured verdicts
json5 = "0.4"  # JSON5 parsing for flexible verdict formats
nom = "7.1"  # Parser combinators for verdict structures

# Force compatible versions to resolve indicatif/console conflicts
indicatif = "0.16"
console = "0.16"

# Torch integration now enabled with libtorch in root directory

[features]
default = []
full = ["dep:rust-bert"]  # Removed apple-silicon due to torch compilation issues
with_bert = ["dep:rust-bert"]