[package]
name = "agent-agency-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Database-specific dependencies
# sqlx already defined in workspace dependencies above
deadpool = "0.10"
deadpool-postgres = "0.11"
tokio-postgres = "0.7"
sha2 = "0.10"  # For checksum calculations
regex = "1.10"  # For migration parsing

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
