[package]
name = "demo_app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Our newly implemented crates
runtime-optimization = { path = "../runtime-optimization" }
tool-ecosystem = { path = "../tool-ecosystem" }
federated-learning = { path = "../federated-learning" }
model-hotswap = { path = "../model-hotswap" }

# Core dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
